[project]
requires-python = ">=3.11"

[tool.poetry]
name = "repo-template"
version = "1.0.0"
description = "Repo template for myeslf"
authors = ["seriaati <seria.ati@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pre-commit = "^3.6.1"

[tool.poetry.group.linux]
optional = true

[tool.poetry.group.linux.dependencies]
uvloop = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E","W","C90","F","UP","B","SIM","I","N","TCH",
    "ANN","ASYNC","A","C4","EM","FA","ICN","G",
    "PIE","T20","ARG","ERA","LOG","PL","TRY"
]
ignore = [
    "E501","ANN401","ANN101","ANN102","ANN003",
    "PLR0913","PLR2004","PLR0917","PLR6301",
    "ANN002"
]
preview = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403"]
"playground.*.py" = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true